objects/vlocity_cmt__UIFacet__c.object
<CustomObject>
    <description>Represents a reusable facet label used in object layouts.</description>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this UI Facet. Used to identify the UI Facet across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique UI Facet identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IconVlocityAttachmentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Icon</label>
        <referenceTo>vlocity_cmt__VlocityAttachment__c</referenceTo>
        <relationshipLabel>Vlocity UI Facets</relationshipLabel>
        <relationshipName>VlocityUIFacets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IframeSource__c</fullName>
        <label>iframe Source</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Vlocity UI Facet</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Facet Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity UI Facets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>